--- a/src/pages/Workshops/styles.css
+++ b/src/pages/Workshops/styles.css
@@ -5,7 +5,10 @@
 }
 
 .card{
-    width:600px;
     margin: 25px 50px;
+    margin-right: 0 ! important;
+    margin-left: 0 ! important;
+    width: 700px;
+    text-align: justify;
 }
 
