add events locations on contact page

--- a/src/pages/Workshops/styles.css
+++ b/src/pages/Workshops/styles.css
@@ -12,3 +12,12 @@
     text-align: justify;
 }
 
+.venue{
+    color: white;
+    text-decoration: none;
+}
+
+.venue:hover{
+    color: #d41367;
+    text-decoration: none;
+}
